build: add launch4j plugin